--- a/oc3/upload/admin/view/template/extension/module/prom_sync.twig
+++ b/oc3/upload/admin/view/template/extension/module/prom_sync.twig
@@ -186,6 +186,17 @@
                         </label>
                       </div>
                     </div>
+
+                    <div class="form-group">
+                      <label class="col-sm-8 control-label">{{ entry_keep_zero_qty_enabled }}</label>
+                      <div class="col-sm-4">
+                        <input type="hidden" name="module_prom_sync_keep_zero_qty_enabled" value="0" />
+                        <label class="ps-switch">
+                          <input type="checkbox" name="module_prom_sync_keep_zero_qty_enabled" value="1" {% if module_prom_sync_keep_zero_qty_enabled %}checked="checked"{% endif %} />
+                          <span class="ps-slider"></span>
+                        </label>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="col-sm-6">
